Update path on JS files

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
             </a>
         </div>
     </footer>
-    <script src="/js/ScrollMagic.min.js"></script>
-    <script src="/js/plugins/debug.addIndicators.min.js"></script>
-    <script src="/index.js"></script>
+    <script src="./js/ScrollMagic.min.js"></script>
+    <script src="./js/plugins/debug.addIndicators.min.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
