--- a/index.html
+++ b/index.html
@@ -260,21 +260,21 @@
             <h3>Edición Alejandro Ochoa. 2024</h3>
         </div>
         <div class="social">
-            <a href="https://www.instagram.com/eredurei/" target="_blank">
+            <a href="mailto:eredurei@gmail.com" target="_blank">
                 <figure>
-                    <img src="./images/icons-instagram.svg" alt="Instagram">
+                    <img src="./images/email-svg.svg" alt="Instagram">
                 </figure>
                 Erick Moscoso
             </a>
-            <a href="https://www.instagram.com/danielpalomino_/" target="_blank">
+            <a href="mailto:danielpalominocamacho19@gmail.com" target="_blank">
                 <figure>
-                    <img src="./images/icons-instagram.svg" alt="Instagram">
+                    <img src="./images/email-svg.svg" alt="Instagram">
                 </figure>
                 Daniel Palomino
             </a>
-            <a href="https://www.instagram.com/_akademo_/" target="_blank">
+            <a href="mailto:ochoalejandro24117@gmail.com" target="_blank">
                 <figure>
-                    <img src="./images/icons-instagram.svg" alt="Instagram">
+                    <img src="./images/email-svg.svg" alt="Instagram">
                 </figure>
                 Alejandro Ochoa
             </a>
