Updates and lightbox

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./node_modules/lightbox2/dist/css/lightbox.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Potafolio Oscar Posada</title>
 </head>
@@ -57,9 +58,11 @@
             </div>
         </div>
         <div class="intro__image animate-fade bottom">
-            <figure>
-                <img load="lazy"src="./images/IMG_0420-Edit.webp" alt="">
-            </figure>
+            <a href="./images/IMG_0420-Edit.webp" data-lightbox="" rel="lightbox">
+                <figure>
+                    <img load="lazy"src="./images/IMG_0420-Edit.webp" alt="">
+                </figure>
+            </a>
         </div>
     </section>
     <section class="first-block">
@@ -71,12 +74,11 @@
         </div>
         <div class="first-block__images">
             <div class="first-block__images--image description description animate-fade right">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0502.webp" alt="">
-                </figure>
-                <div class="image-description">
-                   <p><strong>Negro sobre blanco</strong>metal cortado en Láser, pintura esmalte.2019.<span>Dimensiones: 76 x 30 x 30 cts.</span></p>
-                </div>
+                <a href="./images/IMG_0502.webp" data-lightbox="first-block" data-title="Negro sobre blanco / metal cortado en Láser, pintura esmalte.2019. / Dimensiones: 76 x 30 x 30 cts.">
+                    <figure>
+                        <img load="lazy"src="./images/IMG_0502.webp" alt="">
+                    </figure>
+                </a>
             </div>
             <div class="first-block__images--text animate-fade bottom">
                 <p>Ese juego de planos triangulares que unas veces actúan como as y otras como envés, unas veces giran hacia adentro, otras afuera, unas veces actúan como positivo y otras, negativo; unas veces construidas dentro de la simetría, otras como la flor de la “Strelitzia Reginae” de forma asimétrica; más no así, las hojas de su palma que se manifiestan de una forma estrictamente radiada.<br><br>
@@ -85,12 +87,11 @@
                 </p>
             </div>
             <div class="first-block__images--image description description animate-fade left">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0506.webp" alt="">
-                </figure>
-                <div class="image-description">
-                   <p><strong>Flores negras</strong>metal cortado en Láser y pintado en negro. 2021.<span>Dimensiones: 70 x 56 x 56 cts.</span></p>
-                </div>
+                <a href="./images/IMG_0506.webp" data-lightbox="first-block" data-title="Flores negras / metal cortado en Láser y pintado en negro. 2021. / Dimensiones: 70 x 56 x 56 cts.">
+                    <figure>
+                        <img load="lazy"src="./images/IMG_0506.webp" alt="">
+                    </figure>
+                </a>
             </div>
         </div>
     </section>
@@ -101,28 +102,25 @@
         </div>
         <div class="second-block__images animate-fade bottom">
             <div class="second-block__images--image description">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0487.webp" alt="">
-                </figure>
-                <div class="image-description">
-                   <p><strong>Musa Paradisiaca (Mata de Plátano)</strong>Metal cortado y doblado a mano. 2020.<span>Dimensiones: 35 x 25 x 25 cts.</span></p>
-                </div>
+                <a href="./images/IMG_0487.webp" data-lightbox="second-block" data-title="Musa Paradisiaca (Mata de Plátano) / Metal cortado y doblado a mano. 2020. / Dimensiones: 35 x 25 x 25 cts.">
+                    <figure>
+                        <img load="lazy"src="./images/IMG_0487.webp" alt="">
+                    </figure>
+                </a>
             </div>
             <div class="second-block__images--image description">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0470.webp" alt="">
-                </figure>
-                <div class="image-description">
-                <p><strong>Flamenco</strong>Metal cortado en Láser, doblado a mano, pintura esmalte. 2020.<span>Dimensiones: 37 x 40 x 40.</span></p>
-            </div>
+                <a href="./images/IMG_0470.webp" data-lightbox="second-block" data-title="Flamenco / Metal cortado en Láser, doblado a mano, pintura esmalte. 2020. / Dimensiones: 37 x 40 x 40.">
+                    <figure>
+                        <img load="lazy"src="./images/IMG_0470.webp" alt="">
+                    </figure>
+                </a>
             </div>
             <div class="second-block__images--image description">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0497.webp" alt="">
-                </figure>
-                <div class="image-description">
-                <p><strong>Súplica a Dios por la Paz</strong>Metal cortado en Láser, sin pintura.<span>Dimensiones 75 x 32 x 32 cts.</span></p>
-            </div>
+                <a href="./images/IMG_0497.webp" data-lightbox="second-block" data-title="Súplica a Dios por la Paz / Metal cortado en Láser, sin pintura. / Dimensiones 75 x 32 x 32 cts.">
+                    <figure>
+                        <img load="lazy"src="./images/IMG_0497.webp" alt="">
+                    </figure>
+                </a>
             </div>
         </div>
         <div class="second-block__text container animate-fade top">
@@ -139,41 +137,39 @@
         </div>
         <div class="third-block__images animate-fade bottom">
             <div class="third-block__images--image description">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0428.webp" alt="">
-                </figure>
-                <div class="image-description">
-                <p><strong>Gran Tunjo, relieve</strong>metal cortado en Láser, revestido en laminilla de oro. 2021.<span>Dimensiones:151 x 28 x 12 cts.</span></p>
-            </div>
-            </div>
-            <div class="third-block__images--image description">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0459.webp" alt="">
-                </figure>
-                <div class="image-description">
-                <p><strong>Tunjo doble</strong>metal revestido en laminilla de oro, base metálica revestida en laminilla de plata. 2023.<span>Dimensiones: 30 x 15 x 7 cts.</span></p>
-            </div>
+                <a href="./images/IMG_0428.webp" data-lightbox="third-block" data-title="Gran Tunjo, relieve / metal cortado en Láser, revestido en laminilla de oro. 2021. / Dimensiones:151 x 28 x 12 cts.">
+                    <figure>
+                        <img load="lazy"src="./images/IMG_0428.webp" alt="">
+                    </figure>
+                </a>
             </div>
             <div class="third-block__images--image description">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0438.webp" alt="">
-                </figure>
+                <a href="./images/IMG_0459.webp" data-lightbox="third-block" data-title="Tunjo doble / metal revestido en laminilla de oro, base metálica revestida en laminilla de plata. 2023. / Dimensiones: 30 x 15 x 7 cts.">
+                    <figure>
+                        <img load="lazy"src="./images/IMG_0459.webp" alt="">
+                    </figure>
+                </a>
+            </div>
+            <div class="third-block__images--image">
+                <a href="./images/IMG_0438.webp" data-lightbox="third-block" data-title="">
+                    <figure>
+                        <img load="lazy"src="./images/IMG_0438.webp" alt="">
+                    </figure>
+                </a>
             </div>
             <div class="third-block__images--image description">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0518.webp" alt="">
-                </figure>
-                <div class="image-description">
-                <p><strong>Monumento funerario</strong>Metal cortado en Láser, pintura electroestática. 2022.<span>Dimensiones: 25. x 50 x 50 cts.</span></p>
-            </div>
+                <a href="./images/IMG_0518.webp" data-lightbox="third-block" data-title="Monumento funerario / Metal cortado en Láser, pintura electroestática. 2022. / Dimensiones: 25. x 50 x 50 cts.">
+                    <figure>
+                        <img load="lazy"src="./images/IMG_0518.webp" alt="">
+                    </figure>
+                </a>
             </div>
             <div class="third-block__images--image description">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0520.webp" alt="">
-                </figure>
-                <div class="image-description">
-                <p><strong>Monumento funerario</strong>Metal cortado en Láser, pintura electroestática. 2022.<span>Dimensiones: 25. x 50 x 50 cts.</span></p>
-            </div>
+                <a href="./images/IMG_0520.webp" data-lightbox="third-block" data-title="Monumento funerario / Metal cortado en Láser, pintura electroestática. 2022. / Dimensiones: 25. x 50 x 50 cts.">
+                    <figure>
+                        <img load="lazy"src="./images/IMG_0520.webp" alt="">
+                    </figure>
+                </a>
             </div>
         </div>
         <div class="third-block__text animate-fade top">
@@ -282,6 +278,7 @@
     </footer>
     <script src="./js/ScrollMagic.min.js"></script>
     <script src="./js/plugins/debug.addIndicators.min.js"></script>
+    <script type="text/javascript" src="./node_modules/lightbox2/dist/js/lightbox-plus-jquery.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
