--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./node_modules/lightbox2/dist/css/lightbox.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="./css/lightbox.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Potafolio Oscar Posada</title>
 </head>
@@ -278,7 +278,7 @@
     </footer>
     <script src="./js/ScrollMagic.min.js"></script>
     <script src="./js/plugins/debug.addIndicators.min.js"></script>
-    <script type="text/javascript" src="./node_modules/lightbox2/dist/js/lightbox-plus-jquery.js"></script>
+    <script type="text/javascript" src="./js/lightbox-plus-jquery.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
