--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
     <section class="top-content">
         <div class="top-content__title">
             <h1>Oscar Posada Correa</h1>
+            <p>Destacado escultor</p>
         </div>
         <div class="top-content__image animate-fade">
             <figure>
-                <img load="lazy"src="./images/IMG_0440.webp" alt="Imágen pricipal">
+                <img load="lazy"src="./images/IMG_0424.webp" alt="">
             </figure>
         </div>
         <div class="top-content__description animate-fade bottom">
-            <p>Destacado escultor contemporáneo conocido por sus obras abstractas. Su habilidad para transformar materiales en formas expresivas evoca emociones profundas. Sus esculturas desafían percepciones y invitan a una experiencia estética única.</p>
+            <p>Al estudiar la geometría en la naturaleza, específicamente en la flor de la Strelitzia Augusta (Palma del viajero), observé la similitud que existe entre la estructura de la flor y la estructura profunda del cuadrado, principio u origen de la arquitectura. En ambas geometrías, se crea una red o malla conformada por puntos, líneas y planos (rectos, y también curvos) de infinitos movimientos. Como resultado de esta relación o semejanza, aparece la triple interpretación... “naturaleza, geometría y escultura”.</p>
         </div>
     </section>
     <section class="intro">
@@ -51,25 +52,16 @@
             </div>
             <div class="intro__text animate-fade top">
                 <p>
-                    Al estudiar la geometría en la naturaleza, específicamente en la flor de la Strelitzia Augusta (Palma del viajero), observé la similitud que existe entre la estructura de la flor y la estructura profunda del cuadrado, principio u origen de la arquitectura. En ambas geometrías, se crea una red o malla conformada por puntos, líneas y planos (rectos, y también curvos) de infinitos movimientos. Como resultado de esta relación o semejanza, aparece la triple interpretación... “naturaleza, geometría y escultura”.<br>
-                    Quiero observar la naturaleza para entender la escultura; un árbol, una flor, una hoja, paradigmas de mínimo esfuerzo, mínima materia y máxima resistencia y economía de forma, término acuñado por el señor P.H. Scholfield en su libro: “Teoría de la proporción en arquitectura”.<br>
-                    Examino el equilibrio de fuerzas, el orden, par, alterno, la repetición, la progresión, el género, la dualidad. El circulo, el cuadrado y el triángulo flotando en el espacio.
+                    En la escultura, al desenvolver el plano en el espacio, aflora como por “arte de magia” una figura tridimensional donde lo “racional y lo casual” se encuentran dejando ver afinidades formales con la flor de la Palma del Viajero y con éstas nuevas arquitecturas o construcciones que he empezado a producir con marcado acento geométrico, de escala monumental. 
                 </p>
             </div>
-        </div>
-        <div class="intro__image animate-fade bottom">
-            <a href="./images/IMG_0420-Edit.webp" data-lightbox="" rel="lightbox">
-                <figure>
-                    <img load="lazy"src="./images/IMG_0420-Edit.webp" alt="">
-                </figure>
-            </a>
         </div>
     </section>
     <section class="first-block">
         <div class="container">
             <div class="first-block__text animate-fade top">
                 <h2>De la Geometría a la Escultura</h2>
-                <p>En la escultura, al desenvolver el plano en el espacio, aflora como por “arte de magia” una figura tridimensional donde lo “racional y lo casual” se encuentran dejando ver afinidades formales con la flor de la Palma del Viajero y con éstas nuevas arquitecturas o construcciones que he empezado a producir con marcado acento geométrico, de escala monumental.<br>Sorprende como este cuerpo inanimado que está emergiendo de las entrañas del blanco papel, recrea ciertas cualidades formales y estructurales de un “organismo vivo” como lo es la flor de ésta fascinante herbácea.<br>Así empecé a desdoblar el plano en el espacio: tomé un cuadrado, dibujé sobre él, los ejes cartesianos y las diagonales y de una manera ordenada y alterna, fui cortando con el bisturí y plegando con los dedos los planos triangulares inmersos en el cuadrado. Con respecto al ángulo de inclinación, unas veces lo hice de una manera consciente y otras, obedecía al capricho del material qué oponía cierta resistencia a las órdenes de la mano. </p>
+                <p>Animado por revisar el significado científico de las palabras “Wrap = Envolver” y “Warp = Deformación” que involucran el desenvolvimiento o curvatura del espacio y el tiempo, que es una de las principales consecuencias de la teoría de la relatividad general de acuerdo con la cual la gravedad es efecto o consecuencia de la geometría curva del espacio-tiempo. <br>La línea curva qué, al doblarla sobre el papel, deforma el plano de manera distinta, con respecto a la línea recta perpendicular o diagonal; el espacio se curva, los planos se distorsionan y vuelve a emerger una nueva forma espacial producida por el principio de “causa y efecto”</p>
             </div>
         </div>
         <div class="first-block__images">
@@ -79,12 +71,6 @@
                         <img load="lazy"src="./images/IMG_0502.webp" alt="">
                     </figure>
                 </a>
-            </div>
-            <div class="first-block__images--text animate-fade bottom">
-                <p>Ese juego de planos triangulares que unas veces actúan como as y otras como envés, unas veces giran hacia adentro, otras afuera, unas veces actúan como positivo y otras, negativo; unas veces construidas dentro de la simetría, otras como la flor de la “Strelitzia Reginae” de forma asimétrica; más no así, las hojas de su palma que se manifiestan de una forma estrictamente radiada.<br><br>
-                Todo esto sucede con la complicidad de la luz y la sombra, se multiplica el efecto de lo real y de lo sugerido, ayudando o no, a comprender la forma obtenida.
-                Con el cuadrado y los triángulos flotando en el espacio ya tenía garantizada la forma, la estructura y el aparente volumen en el espacio, y así fui creando formas y distintas composiciones escultóricas, siempre dibujando con las escuadras de 45 y 60 grados. Fue así como realicé la primera composición, dupliqué la figura obtenida y las enfrenté creando la primera composición qué denominé Pórtico Flor viajera 1. en honor a dicha palma. 
-                </p>
             </div>
             <div class="first-block__images--image description description animate-fade left">
                 <a href="./images/IMG_0506.webp" data-lightbox="first-block" data-title="Flores negras / metal cortado en Láser y pintado en negro. 2021. / Dimensiones: 70 x 56 x 56 cts.">
@@ -97,8 +83,8 @@
     </section>
     <section class="second-block">
         <div class="second-block__text container animate-fade top">
-            <h2>La línea curva sobre el plano y<br>sobre el espacio</h2>
-            <p>Después de muchos trabajos realizados en papel y varios en madera y metal, sentí la necesidad de incorporar<br>la línea curva al plano.<br><br>Animado por revisar el significado científico de las palabras <strong>“Wrap = Envolver” y “Warp = Deformación</strong> que involucran el desenvolvimiento o curvatura del espacio y el tiempo, que es una de las principales consecuencias de la teoría de la relatividad general de acuerdo con la cual la gravedad es efecto o consecuencia de la geometría curva del espacio-tiempo.<br><br>La línea curva qué, al doblarla sobre el papel, deforma el plano de manera distinta, con respecto a la línea recta perpendicular o diagonal; el espacio se curva, los planos se distorsionan y vuelve a emerger una nueva forma espacial producida por el principio de “causa y efecto” según Hermes Trismegisto.</p>
+            <h2>La línea curva deformando el espacio</h2>
+            <p>Animado por revisar el significado científico de las palabras “Wrap = Envolver” y “Warp = Deformación” que involucran el desenvolvimiento o curvatura del espacio y el tiempo, que es una de las principales consecuencias de la teoría de la relatividad general de acuerdo con la cual la gravedad es efecto o consecuencia de la geometría curva del espacio-tiempo. <br><br>La línea curva qué, al doblarla sobre el papel, deforma el plano de manera distinta, con respecto a la línea recta perpendicular o diagonal; el espacio se curva, los planos se distorsionan y vuelve a emerger una nueva forma espacial producida por el principio de “causa y efecto”</p>
         </div>
         <div class="second-block__images animate-fade bottom">
             <div class="second-block__images--image description">
@@ -122,10 +108,6 @@
                     </figure>
                 </a>
             </div>
-        </div>
-        <div class="second-block__text container animate-fade top">
-            <h2>Características físicas,<br>formales y estructurales</h2>
-            <p>La nueva estructura tridimensional se genera al imponerle los esfuerzos físicos de presión y tensión sobre la línea curva inscrita en el plano. Convierte al plano por causa y efecto, de una manera simultánea, en dos caras o lados diferentes: una cara de forma cóncava y la otra convexa, generándose un resultado “fascinante”. La estructura interna de la línea, del plano, de la masa (espesor), del espacio y de la energía han mutado, (plano-energía, plano-espacio, plano-luz, y quizá energía-tiempo).</p>
         </div>
     </section>
     <section class="third-block">
