--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
             <div class="bottom-block__biograph">
                 <div class="container">
                     <div class="close">X</div>
+                    <figure>
+                        <img src="./images/IMG_0521.webp" alt="">
+                    </figure>
                     <h2>Oscar Posada Correa</h2>
                     Egresado de la Universidad Pontifica Javeriana,1976. Donde obtuvo el título de Arquitecto, profesión que ha venido desarrollando paralela a la docencia, a la curaduría de arte, a la investigación y a la escultura. 
                     <h3>Arquitectura</h3>
