--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <body>
     <header>
         <div class="social-buttons">
-            <a href="#" target="_blank" aria-label="Instagram">
-                <figure>
-                    <img src="./images/icons-instagram.svg" alt="Instagram">
-                </figure>
-            </a>
             <div class="instagram">
+                <a href="mailto:oposadac@unal.com.co" target="_blank" aria-label="mail">
+                    <figure>
+                        <img src="./images/email-icon.svg" alt="Mail">
+                    </figure>
+                </a>
             </div>
             <div class="phone">
-                <a href="tel:+573158895847" aria-label="">
+                <a href="https://wa.me/573158895847" target="_blank" aria-label="">
                     <figure>
-                        <img src="./images/icon-telefono.svg" alt="Telefono">
+                        <img src="./images/whatsapp-icon.svg" alt="Whatsapp">
                     </figure>
                 </a>
             </div>
@@ -42,9 +42,6 @@
                     <img load="lazy"src="./images/IMG_0424.webp" alt="">
                 </figure>
             </a>
-        </div>
-        <div class="top-content__description animate-fade bottom">
-            
         </div>
     </section>
     <section class="intro">
@@ -69,6 +66,9 @@
         <div class="first-block__images">
             <div class="first-block__images--image description description animate-fade right">
                 <a href="./images/IMG_0502.webp" data-lightbox="first-block" data-title="Negro sobre blanco / metal cortado en Láser, pintura esmalte.2019. / Dimensiones: 76 x 30 x 30 cts.">
+                    <div class="image-text">
+                        Negro sobre blanco<br>metal cortado en Láser, pintura esmalte. 2019.<br>Dimensiones: 76 x 30 x 30 cts.
+                    </div>
                     <figure>
                         <img load="lazy"src="./images/IMG_0502.webp" alt="">
                     </figure>
@@ -76,6 +76,9 @@
             </div>
             <div class="first-block__images--image description description animate-fade left">
                 <a href="./images/IMG_0506.webp" data-lightbox="first-block" data-title="Flores negras / metal cortado en Láser y pintado en negro. 2021. / Dimensiones: 70 x 56 x 56 cts.">
+                    <div class="image-text">
+                        Flores negras<br>metal cortado en Láser y pintado en negro. 2021.<br>Dimensiones: 70 x 56 x 56 cts.
+                    </div>
                     <figure>
                         <img load="lazy"src="./images/IMG_0506.webp" alt="">
                     </figure>
@@ -91,6 +94,9 @@
         <div class="second-block__images animate-fade bottom">
             <div class="second-block__images--image description">
                 <a href="./images/IMG_0487.webp" data-lightbox="second-block" data-title="Musa Paradisiaca (Mata de Plátano) / Metal cortado y doblado a mano. 2020. / Dimensiones: 35 x 25 x 25 cts.">
+                    <div class="image-text">
+                        Musa Paradisiaca (Mata de Plátano)<br>Metal cortado y doblado a mano. 2020.<br>Dimensiones: 35 x 25 x 25 cts.
+                    </div>
                     <figure>
                         <img load="lazy"src="./images/IMG_0487.webp" alt="">
                     </figure>
@@ -98,6 +104,9 @@
             </div>
             <div class="second-block__images--image description">
                 <a href="./images/IMG_0470.webp" data-lightbox="second-block" data-title="Flamenco / Metal cortado en Láser, doblado a mano, pintura esmalte. 2020. / Dimensiones: 37 x 40 x 40.">
+                    <div class="image-text">
+                        Flamenco<br>Metal cortado en Láser, doblado a mano, pintura esmalte. 2020.<br>Dimensiones: 37 x 40 x 40.
+                    </div>
                     <figure>
                         <img load="lazy"src="./images/IMG_0470.webp" alt="">
                     </figure>
@@ -105,6 +114,9 @@
             </div>
             <div class="second-block__images--image description">
                 <a href="./images/IMG_0497.webp" data-lightbox="second-block" data-title="Súplica a Dios por la Paz / Metal cortado en Láser, sin pintura. / Dimensiones 75 x 32 x 32 cts.">
+                    <div class="image-text">
+                        Súplica a Dios por la Paz<br>Metal cortado en Láser, sin pintura.<br>Dimensiones 75 x 32 x 32 cts.
+                    </div>
                     <figure>
                         <img load="lazy"src="./images/IMG_0497.webp" alt="">
                     </figure>
@@ -122,6 +134,9 @@
         <div class="third-block__images animate-fade bottom">
             <div class="third-block__images--image description">
                 <a href="./images/IMG_0428.webp" data-lightbox="third-block" data-title="Gran Tunjo, relieve / metal cortado en Láser, revestido en laminilla de oro. 2021. / Dimensiones:151 x 28 x 12 cts.">
+                    <div class="image-text">
+                        Gran Tunjo, relieve<br>metal cortado en Láser, revestido en laminilla de oro. 2021.<br>Dimensiones:151 x 28 x 12 cts.
+                    </div>
                     <figure>
                         <img load="lazy"src="./images/IMG_0428.webp" alt="">
                     </figure>
@@ -129,6 +144,9 @@
             </div>
             <div class="third-block__images--image description">
                 <a href="./images/IMG_0459.webp" data-lightbox="third-block" data-title="Tunjo doble / metal revestido en laminilla de oro, base metálica revestida en laminilla de plata. 2023. / Dimensiones: 30 x 15 x 7 cts.">
+                    <div class="image-text">
+                        Tunjo doble<br>metal revestido en laminilla de oro, base metálica revestida en laminilla de plata. 2023.<br>Dimensiones: 30 x 15 x 7 cts.
+                    </div>
                     <figure>
                         <img load="lazy"src="./images/IMG_0459.webp" alt="">
                     </figure>
@@ -143,6 +161,9 @@
             </div>
             <div class="third-block__images--image description">
                 <a href="./images/IMG_0518.webp" data-lightbox="third-block" data-title="Monumento funerario / Metal cortado en Láser, pintura electroestática. 2022. / Dimensiones: 25. x 50 x 50 cts.">
+                    <div class="image-text">
+                        Monumento funerario<br>Metal cortado en Láser, pintura electroestática. 2022.<br>Dimensiones: 25. x 50 x 50 cts.
+                    </div>
                     <figure>
                         <img load="lazy"src="./images/IMG_0518.webp" alt="">
                     </figure>
@@ -150,6 +171,9 @@
             </div>
             <div class="third-block__images--image description">
                 <a href="./images/IMG_0520.webp" data-lightbox="third-block" data-title="Monumento funerario / Metal cortado en Láser, pintura electroestática. 2022. / Dimensiones: 25. x 50 x 50 cts.">
+                    <div class="image-text">
+                        Monumento funerario<br>Metal cortado en Láser, pintura electroestática. 2022.<br>Dimensiones: 25. x 50 x 50 cts.
+                    </div>
                     <figure>
                         <img load="lazy"src="./images/IMG_0520.webp" alt="">
                     </figure>
@@ -170,7 +194,7 @@
             </figure>
         </div>
         <div class="bottom-block__bio">
-            <div class="button-bio">Biografía</div>
+            <div class="btn">Biografía</div>
             <div class="bottom-block__biograph">
                 <div class="container">
                     <div class="close">X</div>
@@ -202,32 +226,13 @@
                 </div>
             </div>
         </div>
+        <div class="contacto">
+            <a href="" class="btn">Contáctame</a>
+        </div>
     </section>
     <footer>
         <div class="credits">
             <h3>Diseño y desarrollo Erick Moscoso. 2024</h3>
-            <h3>Fotografías Daniel Palomino. 2024</h3>
-            <h3>Edición Alejandro Ochoa. 2024</h3>
-        </div>
-        <div class="social">
-            <a href="mailto:eredurei@gmail.com" target="_blank">
-                <figure>
-                    <img src="./images/email-svg.svg" alt="Instagram">
-                </figure>
-                Erick Moscoso
-            </a>
-            <a href="mailto:danielpalominocamacho19@gmail.com" target="_blank">
-                <figure>
-                    <img src="./images/email-svg.svg" alt="Instagram">
-                </figure>
-                Daniel Palomino
-            </a>
-            <a href="mailto:ochoalejandro24117@gmail.com" target="_blank">
-                <figure>
-                    <img src="./images/email-svg.svg" alt="Instagram">
-                </figure>
-                Alejandro Ochoa
-            </a>
         </div>
     </footer>
     <script src="./js/ScrollMagic.min.js"></script>
