Por favor que se me pague

--- a/index.html
+++ b/index.html
@@ -188,13 +188,16 @@
         </div>
     </section>
     <section class="bottom-block">
-        <div class="bottom-block__image">
+        <div class="bottom-block__image description">
+            <div class="image-text">
+                Musa Paradisiaca<br>Hierro Oxidado. 2023.<br>Dimensiones: 49 x 50 x 30.
+            </div>
             <figure>
                 <img src="./images/IMG_0514.webp" alt="">
             </figure>
         </div>
         <div class="bottom-block__bio">
-            <div class="btn">Biografía</div>
+            <div class="btn button-bio">Biografía</div>
             <div class="bottom-block__biograph">
                 <div class="container">
                     <div class="close">X</div>
@@ -226,13 +229,29 @@
                 </div>
             </div>
         </div>
-        <div class="contacto">
-            <a href="" class="btn">Contáctame</a>
-        </div>
     </section>
     <footer>
+        <div class="social">
+            <div class="email">
+                <a href="mailto:oposadac@unal.com.co" target="_blank" aria-label="mail">
+                    <figure>
+                        <img src="./images/email-icon.svg" alt="Mail">
+                    </figure>
+                    oposadac@unal.com.co
+                </a>
+            </div>
+            <div class="whatsapp">
+                <a href="https://wa.me/573158895847" target="_blank" aria-label="">
+                    <figure>
+                        <img src="./images/whatsapp-icon.svg" alt="Whatsapp">
+                    </figure>
+                    +57 315 8895847
+                </a>
+            </div>
+        </div>
         <div class="credits">
-            <h3>Diseño y desarrollo Erick Moscoso. 2024</h3>
+            <h3>Diseño y desarrollo Erick Moscoso.</h3>
+            <div class="year">2024</div>
         </div>
     </footer>
     <script src="./js/ScrollMagic.min.js"></script>
