Cambiar imagen principal

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>Destacado escultor contemporáneo conocido por sus obras abstractas, sus habilidades para transformar materiales en formas expresivas evocan emociones profundas. Sus esculturas desafían percepciones e invitan a una estética única.</p>
         </div>
         <div class="top-content__image animate-fade">
-            <a href="./images/IMG_0424.webp" data-lightbox="top-image" data-title="Bosque Jazz, madera pintada / 2019 / Dimensiones: 250 x 88 x 17 Cts.">
+            <a href="./images/IMG_0424-new.webp" data-lightbox="top-image" data-title="Bosque Jazz, madera pintada / 2019 / Dimensiones: 250 x 88 x 17 Cts.">
                 <figure>
                     <img load="lazy"src="./images/IMG_0424.webp" alt="">
                 </figure>
