Cambiar imagen principal

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="top-content__image animate-fade">
             <a href="./images/IMG_0424-new.webp" data-lightbox="top-image" data-title="Bosque Jazz, madera pintada / 2019 / Dimensiones: 250 x 88 x 17 Cts.">
                 <figure>
-                    <img load="lazy"src="./images/IMG_0424.webp" alt="">
+                    <img load="lazy"src="./images/IMG_0424-new.webp" alt="">
                 </figure>
             </a>
         </div>
