--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
                     </figure>
                 </a>
             </div>
+            <div class="instagram">
+                <a href="https://www.instagram.com/oscarposadaescultor/" target="_blank" aria-label="Instagram">
+                    <figure>
+                        <img src="./images/icons-instagram.svg" alt="Instagram">
+                    </figure>
+                </a>
+            </div>
             <div class="phone">
                 <a href="https://wa.me/573158895847" target="_blank" aria-label="">
                     <figure>
@@ -238,6 +245,14 @@
                         <img src="./images/email-icon.svg" alt="Mail">
                     </figure>
                     oposadac@unal.com.co
+                </a>
+            </div>
+            <div class="instagram">
+                <a href="https://www.instagram.com/oscarposadaescultor/" target="_blank" aria-label="">
+                    <figure>
+                        <img src="./images/icons-instagram.svg" alt="Mail">
+                    </figure>
+                    @oscarposadaescultor
                 </a>
             </div>
             <div class="whatsapp">
